docs/tests/typing/bad/testfile-class-2.cpp

class S { public: void v; };

